upgrade to gradle 8.7 and use JDK 21